--- a/src/css/footer.module.css
+++ b/src/css/footer.module.css
@@ -2,6 +2,6 @@
     background: linear-gradient(rgb(85, 139, 158), black);
     padding: 20px;
     text-align: center;
-    color: black !important;
+    color: rgb(250, 250, 250) !important;
 }
 
