--- a/src/css/global.css
+++ b/src/css/global.css
@@ -22,6 +22,7 @@ button{
     transition-duration: 0.3s;
     transition-timing-function: ease-in-out;
     color: azure;
+    cursor: pointer !important;
 }
 button:hover{
     box-shadow: 5px 5px 20px rgb(11, 11, 11);
@@ -33,13 +34,6 @@ p{
     text-align: justify; /*this is used to align text evenly*/
     font-weight: 1500;
     padding: 10px;
-}
-
-a::before{
-    color: tomato !important;
-}
-a::after{
-    color: rgb(187, 170, 170) !important;
 }
 
 input,textarea{
