--- a/src/css/input.module.css
+++ b/src/css/input.module.css
@@ -6,7 +6,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 15px;
+  /* padding: 15px; */
   /* border: 2px solid; */
 }
 
@@ -17,7 +17,6 @@
 .i_sec_parent{
   /* border: 5px solid red;  */
   display: flex;
-  padding: 10px;
   background-color: transparent;
   backdrop-filter: blur(10px);
   
@@ -72,7 +71,7 @@
   background-color: black;
 }
 .i_sec2_child > textarea{
-  height: 250px;
+  height: 195px;
   background-color: black;
 }
 
